master #comment fix font icons and right align author in game play question card

--- a/projects/trivia/src/styles/global.scss
+++ b/projects/trivia/src/styles/global.scss
@@ -775,3 +775,7 @@ pre.ql-syntax {
 .gameplay .wrong p, .gameplay .right p {
   color: #fff !important;
 }
+
+game-question .auther{
+  justify-content: flex-end;
+}
